# pyfinlib

./: .gitattributes  .gitignore  README.md  mentor_roadmap.md  progress_pyfinlib.md  pyproject.toml  topics_covered.md
.github/workflows/: ci.yml
